# jex-sc-governance

./: .gitignore  Cargo.toml  README.md
.github/workflows/: on_pull_request_build_contracts.yml
interaction/: _common.snippets.sh  deploy-devnet.interaction.json  devnet.snippets.sh  mainnet.snippets.sh  mxpy.data-storage.json
locker-mock/: Cargo.toml
locker-mock/meta/: Cargo.toml
locker-mock/meta/src/: main.rs
locker-mock/src/: lib.rs
locker-mock/wasm/: Cargo.toml
locker-mock/wasm/src/: lib.rs
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: cleanup.scen.json  cleanup_incomplete.scen.json  cleanup_proposal_not_ended.scen.json  cleanup_proposal_not_found.scen.json  cleanup_proposal_not_owner.scen.json  create_proposal.scen.json  create_proposal_id_already_used.scen.json  create_proposal_invalid_end_timestamp.scen.json  create_proposal_invalid_label.scen.json  create_proposal_invalid_start_timestamp.scen.json  create_proposal_not_admin.scen.json  deploy.scen.json  get_proposals.scen.json  get_proposals_empty.scen.json  get_voting_power.scen.json  get_voting_power_unknown_user.scen.json  set_admin.scen.json  set_admin_not_owner.scen.json  vote_proposal.scen.json  vote_proposal_already_voted.scen.json  vote_proposal_invalid_choice.scen.json  vote_proposal_lock_too_short.scen.json  vote_proposal_no_voting_power.scen.json  vote_proposal_not_found.scen.json  vote_proposal_not_open.scen.json
src/: lib.rs  locker.rs  locker_sc_proxy.rs  proposal.rs
tests/: scenario_go_test.rs  scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
