[package]
name = "jex-sc-governance"
version = "0.0.0"
authors = ["you"]
edition = "2018"
publish = false

[lib]
path = "src/lib.rs"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.56.0"

[dev-dependencies.locker-mock]
path = "locker-mock"

[dependencies.multiversx-sc]
version = "0.56.0"
